--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+nav ul li{
+  @apply px-2;
+}
+
+.bg-color{
+  background: #474f4b;
+}
+
+.mob-nav{
+@apply fixed top-10 left-0 bg-gray-600 w-full h-1/4;
+}
+
+.mob-nav li{
+  @apply w-full h-full text-center border-b-0
+}
