--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,7 @@ nav ul li{
 .mob-nav li{
   @apply w-full h-full text-center border-b-0
 }
+
+.project-desc {
+  @apply absolute left-0 right-0 bottom-0 top-0 bg-content opacity-0 duration-500 hover:opacity-100
+}
