--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@ nav ul li{
   background:#5d7563;
 }
 
+.bg-button{
+  background:#3B82F6;
+}
+
 .mob-nav{
 @apply fixed top-10 left-0 bg-gray-600 w-full h-1/4;
 }
@@ -24,4 +28,12 @@ nav ul li{
 
 .project-desc {
   @apply absolute left-0 right-0 bottom-0 top-0 bg-content opacity-0 duration-500 hover:opacity-100
+}
+
+.btn{
+  @apply bg-button px-5 py-2 font-bold hover:border-2 bg-content rounded;
+}
+
+html{
+  scroll-behavior: smooth;
 }
